--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azure Static Web Apps Sample</title>
+    <title>Web サイト作成体験 | プログラミング体験 | 2021年度新人研修 | FCG</title>
   </head>
 
   <body>
     <main>
-      <h1>Hello Azure Static Web Apps!!</h1>
+      <h1>Web サイト作成体験</h1>
+      <h2>(1) テキストに従って HTML/CSS を書いてみよう</h2>
+      <p>PC に作業フォルダーを作成し、最初の HTML ファイルを作成</p>
+      <ul>
+        <li>雛型: <a href="https://nice-rock-0eec73400.azurestaticapps.net/hellohtml.html">https://nice-rock-0eec73400.azurestaticapps.net/hellohtml.html</a></li>
+      </ul>
     </main>
   </body>
 </html>
