--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
       <ul>
         <li>雛型: <a href="https://nice-rock-0eec73400.azurestaticapps.net/hellohtml.html">https://nice-rock-0eec73400.azurestaticapps.net/hellohtml.html</a></li>
       </ul>
-    </main>
+      <pre>
+        <code>
+          &lt;!DOCTYPE html &gt;
+          &lt;html lang = &quot;ja&quot; &gt;
+          &lt;head&gt;
+          &#160;&#160;&#160; &lt;meta charset = &quot;utf-8&quot; /&gt;
+          &#160;&#160;&#160; &lt;meta name = &quot;viewport&quot; content = &quot;width=device-width,initial-scale=1.0&quot; &gt;
+          &#160;&#160;&#160; &lt;title&gt;&lt;/title&gt;
+          &#160;&#160;&#160; &lt;style&gt;
+          &#160;&#160;&#160;&#160;&#160;&#160;&#160; /* ここに CSS を書く */
+          &#160;
+          &#160;&#160;&#160; &lt; /style&gt;
+          &lt;/head&gt;
+          &lt;body&gt;
+          &#160;&#160;&#160; &lt;!-- ここに HTML の本体を書く --&gt;
+          &#160;
+          &#160;&#160;&#160; &lt;script&gt;
+          &#160;&#160;&#160; // ここに JavaScript を書く
+          &#160;
+          &#160;&#160;&#160; &lt; /script&gt;
+          &lt;/body&gt;
+          &lt;/html&gt;
+        </code>
+      </pre>
+      </main>
   </body>
 </html>
