--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
       <h1>Web サイト作成体験</h1>
       <h2>(1) テキストに従って HTML/CSS を書いてみよう</h2>
+      <h3>最初の HTML</h3>
       <p>PC に作業フォルダーを作成し、最初の HTML ファイルを作成</p>
       <ul>
         <li>雛型: <a href="https://nice-rock-0eec73400.azurestaticapps.net/hellohtml.html">https://nice-rock-0eec73400.azurestaticapps.net/hellohtml.html</a></li>
@@ -38,6 +39,21 @@
           &lt;/html&gt;
         </code>
       </pre>
-      </main>
+
+      <h3>画像や図を表示</h3>
+      <p>サンプル</p>
+      <ul>
+        <li>画像を表示
+          <ul>
+            <li><a href="https://nice-rock-0eec73400.azurestaticapps.net/imgsample1.html">https://nice-rock-0eec73400.azurestaticapps.net/imgsample1.html</a></li>
+          </ul>
+        </li>
+        <li>SVG を表示
+          <ul>
+            <li><a href="https://nice-rock-0eec73400.azurestaticapps.net/svgsample1.html">https://nice-rock-0eec73400.azurestaticapps.net/svgsample1.html</a></li>
+          </ul>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
