Update an image.

--- a/imgsample1.html
+++ b/imgsample1.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <figure>
-        <figcaption>2020年度入社式</figcaption>
-        <img src="images/nyusya2.jpg" alt="2020年度入社式">
+        <figcaption>2021年度新人研修</figcaption>
+        <img src="images/P1160061.JPG" alt="2021年度新人研修">
     </figure>
 
     <script>
