Append hubbleshots.jpg.

--- a/wikipedia_hubble.html
+++ b/wikipedia_hubble.html
@@ -78,7 +78,7 @@
     </div>
 
     <figure>
-    <img src="image/Hubbleshots.jpg" alt="ハッブル宇宙望遠鏡が捉えた宇宙">
+    <img src="images/hubbleshots.jpg" alt="ハッブル宇宙望遠鏡が捉えた宇宙">
     <figcaption>ハッブル宇宙望遠鏡が捉えた宇宙</figcaption>
     </figure>
 
